--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "console.table": "^0.10.0",
     "dotenv": "^10.0.0",
     "inquirer": "^8.1.0",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.7"
+    "mysql": "^2.18.1"
   }
 }
